2005-08-10 16:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) reuse nodes if
	bary is near 0 or 1.
	* src/gridinsert.c (gridReconstructSplitEdgeRatio) edges are not
	implemented.

2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) moved above
	gridFillRingWithExisitingCellFaces to get interface. now splits edge
	and keeps going.
	* src/gridcad.c (gridLineSegmentIntersectsFace) return grid only if 
	radius < 1.0e-6 and 0<bary<1

2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) cleaned up to
	examine ring equators.

2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSegmentIntersectsFace) cleaned up
	
2005-08-09 19:00 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) junk from home
	* src/gridcad.c (gridLineSegmentIntersectsFace) junk from home
	
2005-08-09 18:30 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) started to
	explore the ring fill via grid generation.
	* src/gridcad.c (gridLineSegmentIntersectsFace) started to find
	side-CADface intersection.
	
2005-08-09 13:45 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithExisitingCellFaces) renamed from
	gridFillRingWithFaces. Try all segments before giving up.

2005-08-09 13:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed duplicate
	add of new faces to prevent non-watertight boundaries.
	* src/gridinsert.c (gridFillRingWithFaces) increased the min face
	uv area to 1.0e-16

2005-08-09 12:19 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) to test and fix bug with inconsistent
	node id's and uv values.

2005-08-09 10:08 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) to continue
	debugging, set the min face uv area to 1.0e-16 and allow 29,207 to
	continue.
